--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,12 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#skyprogram"></use>
         </svg>
       </a>
+
       <a href="/bookmarks" class="header__bookmark-btn">
         <img src="static/img/bookmark.png" alt="" class="header__bookmark-icon" width="28">
-        <span class="header__bookmark-counter">{{bookmark_count}}</span>
+        <span class="header__bookmark-counter">{{count_bookmarks_list}}</span>
       </a>
+
     </div>
   </header>
   <main class="container">
@@ -74,9 +76,18 @@
           </div>
           <div class="item__post-bottom">
             <a href="/post/{{post['pk']}}" class="item__btn-more">Подробнее</a>
-            <button type="button" class="item__bookmark-btn">
-              <img src="/static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
-            </button>
+
+<!--            <button type="button" class="item__bookmark-btn">-->
+<!--              <img src="/static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">-->
+<!--            </button>-->
+
+              <a href="/bookmarks_add_del/{{post['pk']}}/">
+                <button type="button" class="item__bookmark-btn">
+                  <img src="/static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
+                </button>
+              </a>
+
+
           </div>
         </div>
       {% endfor %}
